@@ -6,4 +6,3 @@ Todo
   pre-existing signing key.
 * Add support to build for a given Ubuntu distribution.
 * Add support to optionally build using 'pbuilder'.
-* Add support for Java 7.
