@@ -2,6 +2,11 @@
 History
 =======
 
+j7-0.1.8
+-----
+ 
+  * Builds Java 7 packages
+
 0.1.8
 -----
  
